# This file is part of crest.
# SPDX-Identifier: LGPL-3.0-or-later

# -----------------------------
# Linear algebra (BLAS/LAPACK)
# -----------------------------
option(
  'la_backend',
  type: 'combo',
  value: 'auto',
  choices: ['auto', 'mkl', 'openblas', 'netlib', 'custom', 'none'],
  description: 'Linear algebra provider. auto chooses a sensible default per toolchain.',
)


option(
  'custom_libraries',
  type: 'array',
  value: [],
  description: 'Libraries to link when la_backend=custom (e.g. ["-lopenblas", "-llapack"]).',
)

# Optional but often useful for MKL users 
option(
  'mkl_link',
  type: 'combo',
  value: 'auto',
  yield: true,
  choices: ['auto', 'rt', 'static'],
  description: 'How to link MKL: auto=best effort, rt=use libmkl_rt, static=link MKL static archives (not the same as fully static executable).',
)

# -----------------------------
# Parallelism
# -----------------------------
option(
  'openmp',
  type: 'combo',
  value: 'auto',
  yield: true,
  choices: ['auto', 'true', 'false'],
  description: 'OpenMP support: auto=use if available, true=require, false=disable.',
)

# -----------------------------
# Link mode
# -----------------------------
option(
  'link_mode',
  type: 'combo',
  value: 'default',
  yield: true,
  choices: ['default', 'prefer-static', 'fully-static'],
  description: 'Executable link mode: default=normal, prefer-static=prefer static libs when available, fully-static=pass -static (may fail on some systems).',
)

# -----------------------------
# Subproject integrations
# -----------------------------
option('WITH_TBLITE',   type: 'boolean', value: true, description: 'build with tblite integration')
option('WITH_GFN0',     type: 'boolean', value: true, description: 'build with GFN0-xTB integration')
option('WITH_GFNFF',    type: 'boolean', value: true, description: 'build with GFN-FF integration')
option('WITH_TOMLF',    type: 'boolean', value: true, description: 'build with toml-f integration')
option('WITH_LIBPVOL',  type: 'boolean', value: true, description: 'build with libpvol integration')
option('WITH_LWONIOM',  type: 'boolean', value: true, description: 'build with lwONIOM integration')

